--- a/src/css/FileBrowser.css
+++ b/src/css/FileBrowser.css
@@ -85,7 +85,7 @@
     width: 40%;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     /* padding-left: 5%;
     padding-right: 5%;
@@ -96,7 +96,7 @@
 
 .file-button {
     cursor: pointer;
-    width: 50%;
+    width: auto;
     height: auto;
     text-align: center;
     justify-content: center;
