--- a/src/css/Colouring.css
+++ b/src/css/Colouring.css
@@ -14,6 +14,12 @@
     font-weight: 600;
 }
 
+.colors-section{
+    position: sticky;
+    top: 2;
+    margin: 1%;
+}
+
 .part-segment:hover {
     opacity: 0.5;
 }
