--- a/src/css/Colouring.css
+++ b/src/css/Colouring.css
@@ -10,36 +10,51 @@
 .part-segment {
     transition: opacity 0.3s;
     cursor: pointer;
-    font-size: 15px;
     font-weight: 600;
 }
 
-.colors-section{
-    position: sticky;
-    top: 2;
-    margin: 1%;
+.colors-section {
+    position: fixed;
+    bottom: 0;
+    margin: 5%;
 }
 
 .part-segment:hover {
     opacity: 0.5;
 }
 
-.black{
+.black {
     color: black;
 }
 
-.orange{
-    color: orange;
+.orange {
+    color: darkorange;
 }
-.red{
+
+.red {
     color: red;
 }
-.green{
+
+.green {
     color: green;
 }
-.navy{
+
+.navy {
     color: navy;
 }
-.purple{
+
+.purple {
     color: purple;
+}
+
+.rgb-button {
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+    filter: brightness(0.3);
+}
+
+.rgb-button.selected {
+    filter: brightness(1);
+    border-color: white;
 }
