--- a/src/css/Record.css
+++ b/src/css/Record.css
@@ -5,10 +5,11 @@
   border: 2px solid #ccc;
   border-radius: 10px;
   background-color: #f9f9f9;
-  font-family: Arial, sans-serif;
-  font-size: medium;
-  line-height: 1.4;
   margin: 2%;
+  font-family: inherit;
+  font: inherit;
+  font-weight: 500;
+  line-height: 1.4;
 }
 
 .generate-segments-button{
@@ -19,7 +20,6 @@
 {
   width: 100%;
   max-width: 100%;
-  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
