--- a/src/css/Colouring.css
+++ b/src/css/Colouring.css
@@ -51,10 +51,12 @@
     width: 50px;
     height: 50px;
     cursor: pointer;
-    filter: brightness(0.3);
+    filter: brightness(0.7);
 }
 
 .rgb-button.selected {
-    filter: brightness(1);
+    filter: brightness(1.8);
     border-color: white;
+    transform: scale(0.95);
+    transition: transform 0.15s ease-in-out;
 }
