--- a/src/css/Hub.css
+++ b/src/css/Hub.css
@@ -3,7 +3,7 @@ header {
     box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
     border-bottom: 1px solid #e5e5e5;
     white-space: nowrap;
-    min-height: 60px;
+    min-height: 9vh;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -13,15 +13,12 @@ footer {
     width: 100%;
     box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
     border-top: 1px solid #e5e5e5;
-    /* position: absolute;
-    bottom: 0; */
-    min-height: 60px;
-    /* line */
+    min-height: 9vh;
     white-space: nowrap;
     text-align: center;
 }
 
-main{
+main {
     display: block;
     display: flex;
     justify-content: center;
@@ -30,7 +27,7 @@ main{
     height: auto;
 }
 
-.main-section{
+.main-section {
     /* height: 1500px; */
     width: 94%;
     display: flex;
@@ -39,29 +36,41 @@ main{
     justify-content: center;
 }
 
-.sections-container{
+.sections-container {
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    align-items: flex-start;
     width: 100%;
+    background-color: whitesmoke;
+    min-height: 81vh;
 }
 
-.left-section{
+.left-section {
     width: 2%;
 }
 
-.right-section{
+.right-section {
     width: 4%;
     align-items: start;
 }
 
-.return-button{
+.return-button {
     margin: 10%;
     cursor: pointer;
     /* width: auto;
     height: auto; */
-  }
+}
 
-  .change-language-button
-  {
+.change-language-button {
     cursor: pointer;
-  }
+}
+
+.header-left-section {
+    display: flex;
+}
+
+.header-right-section {
+    display: flex;
+    justify-content: flex-end;
+}
