--- a/src/css/ModifyModule.css
+++ b/src/css/ModifyModule.css
@@ -25,3 +25,11 @@
     border-radius: 10px;
     font-weight: 600;
 }
+
+.additional-mudule-options-section
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+}
