--- a/src/css/View.css
+++ b/src/css/View.css
@@ -1,14 +1,20 @@
-
-#view-segments {
+.view-segments {
     width: auto;
     max-width: 100%;
     display: grid;
     /* grid-template-columns: repeat(3, minmax(0, 1fr)); */
     /* grid-template-columns: minmax(0, 10%) 45% 45%; */
-    grid-template-columns: auto auto auto;
     gap: 1px;
     margin: 1%;
     font-size: 20px;
+}
+
+.vertical-segments {
+    grid-template-columns: auto auto;
+}
+
+.classic-segments {
+    grid-template-columns: auto auto auto;
 }
 
 .audioplay-container {
@@ -18,69 +24,56 @@
     margin-right: 10px;
 }
 
-.sentence{
+.sentence {
     width: auto;
     height: auto;
     margin-right: 1%;
-    /* font-size: 20px; */
+    transition: font-size 0.3s ease;
+    font-weight: 600;
+    padding-left: 1%;
+}
+
+.translation {
+    width: auto;
+    height: auto;
+    margin-right: 1%;
     transition: font-size 0.3s ease;
     font-weight: 600;
 }
 
-.font-size-slider{
+.font-size-slider {
     cursor: pointer;
+    min-width: 100px;
     width: 10%;
 }
 
-/* .buttonSegment input {
-    display: block;
-    margin: none;
-    padding: none;
-    width: auto;
-    height: auto;
-    /* justify-content: space-between; 
-    /* align-items: center;
-} */
+.view-options-section {
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    flex-direction: row;
+    width: 100%;
+}
 
-/* .view-button {
-    padding: 5px 4px;
-    background-color: #eaeaea;
-    border: none;
+.view-visible-button {
     cursor: pointer;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(200, 120, 0);
 }
 
-.meaning-button {
-    padding: 5px 4px;
-    background-color: rgb(87, 91, 95);
-    color: rgb(87, 91, 95);
-    border: none;
-    word-wrap: break-word;
+.view-visible-button:hover {
+    transform: scale(1.005);
+    transition: cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
-.view-button.active {
-    background-color: #3e8e41;
+.translation-section {
+    position: relative;
+    border: 1px solid black;
+    background-color: rgb(228, 228, 228);
+    margin-bottom: 5px;
+    padding-left: 1%;
 }
-
-.record-button.active {
-    background-color: #3e8e41;
-    color: white;
-}
-
-.record-button-done.active {
-    background-color: rgb(76, 113, 69);
-    color: white;
-}
-
-.record-button-done.onmouse {
-    background-color: rgb(122, 183, 109);
-    color: white;
-}
-
-#containerForViews{
-     display: flex;
-    align-items: center;
-    justify-content: center; 
-    width: 60%;
-    border: 1px solid;
-    border-spacing: 2px 10px;
-} */
