--- a/src/css/fontello/css/fontello-codes.css
+++ b/src/css/fontello/css/fontello-codes.css
@@ -1,8 +1,22 @@
 
-.icon-play:before { content: '\e800'; } /* '' */
-.icon-progress-0:before { content: '\e801'; } /* '' */
-.icon-wrench:before { content: '\e802'; } /* '' */
-.icon-pause:before { content: '\e803'; } /* '' */
-.icon-logout:before { content: '\e804'; } /* '' */
-.icon-login:before { content: '\e805'; } /* '' */
+.icon-exchange:before { content: '\e800'; } /* '' */
+.icon-cog-alt:before { content: '\e801'; } /* '' */
+.icon-cog:before { content: '\e802'; } /* '' */
+.icon-play:before { content: '\e803'; } /* '' */
+.icon-pause:before { content: '\e804'; } /* '' */
+.icon-logout:before { content: '\e805'; } /* '' */
+.icon-login:before { content: '\e806'; } /* '' */
+.icon-ok:before { content: '\e807'; } /* '' */
+.icon-minus:before { content: '\e808'; } /* '' */
+.icon-plus:before { content: '\e809'; } /* '' */
+.icon-users:before { content: '\e80a'; } /* '' */
+.icon-folder:before { content: '\e80b'; } /* '' */
+.icon-spin6:before { content: '\e839'; } /* '' */
 .icon-reply:before { content: '\f112'; } /* '' */
+.icon-info:before { content: '\f129'; } /* '' */
+.icon-doc-text-inv:before { content: '\f15c'; } /* '' */
+.icon-google:before { content: '\f1a0'; } /* '' */
+.icon-sliders:before { content: '\f1de'; } /* '' */
+.icon-trash:before { content: '\f1f8'; } /* '' */
+.icon-user-plus:before { content: '\f234'; } /* '' */
+.icon-user-times:before { content: '\f235'; } /* '' */
