--- a/src/css/fontello/css/fontello.css
+++ b/src/css/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?86991254');
-  src: url('../font/fontello.eot?86991254#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?86991254') format('woff2'),
-       url('../font/fontello.woff?86991254') format('woff'),
-       url('../font/fontello.ttf?86991254') format('truetype'),
-       url('../font/fontello.svg?86991254#fontello') format('svg');
+  src: url('../font/fontello.eot?38909909');
+  src: url('../font/fontello.eot?38909909#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?38909909') format('woff2'),
+       url('../font/fontello.woff?38909909') format('woff'),
+       url('../font/fontello.ttf?38909909') format('truetype'),
+       url('../font/fontello.svg?38909909#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?86991254#fontello') format('svg');
+    src: url('../font/fontello.svg?38909909#fontello') format('svg');
   }
 }
 */
@@ -54,10 +54,24 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
 
-.icon-play:before { content: '\e800'; } /* '' */
-.icon-progress-0:before { content: '\e801'; } /* '' */
-.icon-wrench:before { content: '\e802'; } /* '' */
-.icon-pause:before { content: '\e803'; } /* '' */
-.icon-logout:before { content: '\e804'; } /* '' */
-.icon-login:before { content: '\e805'; } /* '' */
+.icon-exchange:before { content: '\e800'; } /* '' */
+.icon-cog-alt:before { content: '\e801'; } /* '' */
+.icon-cog:before { content: '\e802'; } /* '' */
+.icon-play:before { content: '\e803'; } /* '' */
+.icon-pause:before { content: '\e804'; } /* '' */
+.icon-logout:before { content: '\e805'; } /* '' */
+.icon-login:before { content: '\e806'; } /* '' */
+.icon-ok:before { content: '\e807'; } /* '' */
+.icon-minus:before { content: '\e808'; } /* '' */
+.icon-plus:before { content: '\e809'; } /* '' */
+.icon-users:before { content: '\e80a'; } /* '' */
+.icon-folder:before { content: '\e80b'; } /* '' */
+.icon-spin6:before { content: '\e839'; } /* '' */
 .icon-reply:before { content: '\f112'; } /* '' */
+.icon-info:before { content: '\f129'; } /* '' */
+.icon-doc-text-inv:before { content: '\f15c'; } /* '' */
+.icon-google:before { content: '\f1a0'; } /* '' */
+.icon-sliders:before { content: '\f1de'; } /* '' */
+.icon-trash:before { content: '\f1f8'; } /* '' */
+.icon-user-plus:before { content: '\f234'; } /* '' */
+.icon-user-times:before { content: '\f235'; } /* '' */
