--- a/src/css/View.css
+++ b/src/css/View.css
@@ -43,7 +43,7 @@
 
 .font-size-slider {
     cursor: pointer;
-    min-width: 100px;
+    min-width: 150px;
     width: 10%;
 }
 
@@ -53,6 +53,7 @@
     align-items: flex-end;
     flex-direction: row;
     width: 100%;
+    margin: 5px;
 }
 
 .view-visible-button {
