--- a/src/css/SettingsModal.css
+++ b/src/css/SettingsModal.css
@@ -25,6 +25,7 @@
 .options-button {
     cursor: pointer;
     scale: 1.4;
+    margin: 20%;
     border: 1px solid black;
     border-radius: 10px;
     box-shadow: 1px 1px 2px 0px rgba(66, 68, 90, 1);
