--- a/src/css/Hub.css
+++ b/src/css/Hub.css
@@ -78,8 +78,19 @@ main {
 .options-button {
     cursor: pointer;
     scale: 1.4;
-    margin: 20%;
+    margin: 10px;
     border: 1px solid black;
     border-radius: 10px;
     box-shadow: 1px 1px 2px 0px rgba(66, 68, 90, 1);
+}
+
+.return-button {
+    position: absolute;
+    top: 80px;
+    left: 3%;
+    margin: 0;
+}
+
+.common-button{
+    cursor: pointer;
 }
