--- a/src/css/View.css
+++ b/src/css/View.css
@@ -13,17 +13,6 @@
     grid-template-columns: auto auto;
 }
 
-.classic-segments {
-    grid-template-columns: auto auto auto;
-}
-
-.audioplay-container {
-    /* position: absolute; */
-    top: 0;
-    right: 0;
-    margin-right: 10px;
-}
-
 .sentence {
     width: auto;
     height: auto;
@@ -77,6 +66,7 @@
     width: 100%;
     height: 100%;
     background-color: rgb(200, 120, 0);
+    opacity: 0;
 }
 
 .view-visible-button:hover {
@@ -84,10 +74,14 @@
     transition: cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
+.hidden{
+    opacity: 1;
+}
+
 .translation-section {
     position: relative;
     border: 1px solid black;
     background-color: rgb(228, 228, 228);
-    margin-bottom: 5px;
-    padding-left: 1%;
+    padding: 1px;
+    width: 100%;
 }
