--- a/src/containers/Hub/Hub.scss
+++ b/src/containers/Hub/Hub.scss
@@ -1,14 +1,14 @@
-header {
-    width: 100% !important;
-    box-shadow: 1rem 1rem 1rem 1rem rgba(0, 0, 0, .05);
-    border-bottom: 1px solid darkgray;
-    white-space: nowrap;
-    min-height: 9vh;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    z-index: 1;
-}
+// header {
+//     width: 100% !important;
+//     box-shadow: 1rem 1rem 1rem 1rem rgba(0, 0, 0, .05);
+//     border-bottom: 1px solid darkgray;
+//     white-space: nowrap;
+//     min-height: 9vh;
+//     display: flex;
+//     justify-content: space-between;
+//     align-items: center;
+//     z-index: 1;
+// }
 
 footer {
     width: 100%;
