file browser: (improvement folder navigation, add bootstrap), repair segmenting form

--- a/src/components/Forms/Module/css/Buttons.css
+++ b/src/components/Forms/Module/css/Buttons.css
@@ -27,12 +27,12 @@
     margin: 10%;
 }
 
-.list-group-item {
+/* .list-group-item {
     position: relative;
     display: block;
     padding: 0.20rem 0.40rem;
     margin-bottom: -1px;
     background-color: #fff;
     border: 1px solid rgba(0,0,0,.125);
-}
+} */
 
