--- a/src/components/Forms/Module/SortableSection/SortableSection.scss
+++ b/src/components/Forms/Module/SortableSection/SortableSection.scss
@@ -1,4 +1,5 @@
-@import "./../../../../css/main.scss";
+@import "~bootstrap/scss/functions";
+@import "~bootstrap/scss/variables";
 
 .sortable-section__separator {
     // min-height: 2rem;
