--- a/src/containers/Hub/Hub.scss
+++ b/src/containers/Hub/Hub.scss
@@ -1,24 +1,3 @@
-// header {
-//     width: 100% !important;
-//     box-shadow: 1rem 1rem 1rem 1rem rgba(0, 0, 0, .05);
-//     border-bottom: 1px solid darkgray;
-//     white-space: nowrap;
-//     min-height: 9vh;
-//     display: flex;
-//     justify-content: space-between;
-//     align-items: center;
-//     z-index: 1;
-// }
-
-footer {
-    width: 100%;
-    box-shadow: 1rem 1rem 1rem 1rem rgba(0, 0, 0, .05);
-    border-top: 1px solid darkgray;
-    min-height: 12vh;
-    white-space: nowrap;
-    text-align: center;
-}
-
 main {
     display: block;
     display: flex;
@@ -28,13 +7,15 @@ main {
     height: auto;
 }
 
-.main-section {
+.hub__main-section {
     /* height: 1500px; */
-    width: 98%;
+    width: 100%;
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: center;
+    padding: 0.8rem;
+
 }
 
 .sections-container {
@@ -44,7 +25,7 @@ main {
     align-items: flex-start;
     width: 100%;
     background-color: whitesmoke;
-    min-height: 81vh;
+    min-height: 82vh;
 }
 
 .left-section {
