--- a/src/css/Custom/_custom.scss
+++ b/src/css/Custom/_custom.scss
@@ -1,9 +1,10 @@
 // Option B: Include parts of Bootstrap
-
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css");
 //1. Include functions first (so you can manipulate colors, SVGs, calc, etc)
 @import "~bootstrap/scss/functions";
 
 // // 2. Include any default variable overrides here
+
 @import "./colors.scss";
 $navbar-padding-x: 2rem;
 
@@ -12,7 +13,8 @@ $badge-font-size: 1rem;
 $badge-padding-x: 0.35rem;
 $badge-padding-y: 0.35rem;
 
-// $grid-gutter-width: 2rem;
+$list-group-item-color-scale: 100%;
+$list-group-border-width: 2px;
 
 // // 3. Include remainder of required Bootstrap stylesheets (including any separate color mode stylesheets)
 @import "~bootstrap/scss/variables";
@@ -20,11 +22,19 @@ $badge-padding-y: 0.35rem;
 
 // 4. Include any default map overrides here
 
+$custom-colors: (
+  "balwan": $green
+);
+
+$theme-colors: map-merge($theme-colors, $custom-colors);
+
 // 5. Include remainder of required parts
 @import "~bootstrap/scss/maps";
 @import "~bootstrap/scss/mixins";
+@import "~bootstrap/scss/mixins/list-group";
 @import "~bootstrap/scss/root";
 
+// @include list-group-item-variant("balwan", $blue, $black);
 // 6. Optionally include any other parts as needed
 @import "~bootstrap/scss/utilities";
 @import "~bootstrap/scss/reboot";
@@ -39,12 +49,17 @@ $badge-padding-y: 0.35rem;
 @import "~bootstrap/scss/navbar";
 @import "~bootstrap/scss/dropdown";
 @import "~bootstrap/scss/badge";
-// @import "~bootstrap/scss/row";
-// @import "~bootstrap/scss/stack";
+@import "~bootstrap/scss/breadcrumb";
+@import "~bootstrap/scss/button-group";
+@import "~bootstrap/scss/close";
+@import "~bootstrap/scss/forms";
+@import "~bootstrap/scss/list-group";
+@import "~bootstrap/scss/modal";
+@import "~bootstrap/scss/spinners";
 
 // 7. Optionally include utilities API last to generate classes based on the Sass map in `_utilities.scss`
 @import "~bootstrap/scss/utilities/api";
 
-// @import "~bootstrap/scss/bootstrap";
-
 // 8. Add additional custom code here
+
+// @import "../../containers/Header/Header.scss";
