--- a/src/containers/View/View.scss
+++ b/src/containers/View/View.scss
@@ -1,87 +1,28 @@
-.view-segments {
-    width: auto;
-    max-width: 100%;
-    display: grid;
-    /* grid-template-columns: repeat(3, minmax(0, 1fr)); */
-    /* grid-template-columns: minmax(0, 10%) 45% 45%; */
-    gap: 1px;
-    margin: 1%;
-    font-size: 20px;
-}
+@import "~bootstrap/scss/functions";
+@import "~bootstrap/scss/variables";
 
-.vertical-segments {
-    grid-template-columns: auto auto;
-}
-
-.sentence {
-    width: auto;
-    height: auto;
-    margin-right: 1%;
-    transition: font-size 0.3s ease;
-    font-weight: 600;
-    padding-left: 1%;
-}
-
-.translation {
-    width: auto;
-    height: auto;
-    margin-right: 1%;
-    transition: font-size 0.3s ease;
-    font-weight: 600;
-}
-
-.font-size-slider {
-    cursor: pointer;
-    min-width: 150px;
-    width: 10%;
-}
-
-.view-options-section {
+.view {
     display: flex;
-    justify-content: space-between;
-    flex-direction: row;
-    width: 100%;
-    margin: 5px;
-}
-
-.view-options-right {
-    display: flex;
-    justify-content: flex-end;
+    flex-direction: column;
     align-items: center;
-    flex-direction: row;
-}
-
-.view-options-left {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    flex-direction: row;
-}
-
-.view-visible-button {
-    cursor: pointer;
-    position: absolute;
-    top: 0;
-    left: 0;
+    font-weight: 500;
     width: 100%;
-    height: 100%;
-    background-color: rgb(200, 120, 0);
-    opacity: 0;
-}
-
-.view-visible-button:hover {
-    transform: scale(1.005);
-    transition: cubic-bezier(0.075, 0.82, 0.165, 1);
-}
-
-.hidden{
-    opacity: 1;
-}
-
-.translation-section {
     position: relative;
-    border: 1px solid black;
-    background-color: rgb(228, 228, 228);
-    padding: 1px;
-    width: 100%;
+
+    &__font-size-label {
+        width: 15%;
+        min-width: 150px;
+    }
+
+    &__option-button {
+        // font-size: inherit !important;
+        margin: 0.1rem;
+    }
+
+    &__options {
+        display: flex;
+        justify-content: flex-end;
+        flex-direction: row;
+        width: 100%;
+    }
 }
