improvement overlay view

--- a/src/containers/Header/Header.scss
+++ b/src/containers/Header/Header.scss
@@ -9,7 +9,8 @@
     z-index: 1;
     display: flex;
     flex-direction: row;
-
+    background-color: $white;
+    
     &__navbar {
         padding: 0.5rem;
     }
