--- a/src/containers/View/View.scss
+++ b/src/containers/View/View.scss
@@ -6,6 +6,7 @@
     flex-direction: column;
     align-items: center;
     font-weight: 500;
+    font-size: 1.4rem;
     width: 100%;
     position: relative;
 
