--- a/src/containers/ModifyModule/ModifyModule.scss
+++ b/src/containers/ModifyModule/ModifyModule.scss
@@ -7,6 +7,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    position: relative;
 
     &__filename {
         margin-top: 1rem;
