--- a/src/components/Forms/OptionsModule/OptionsModuleForm/OptionsModuleForm.scss
+++ b/src/components/Forms/OptionsModule/OptionsModuleForm/OptionsModuleForm.scss
@@ -1,68 +1,47 @@
-.options-module-button {
-    border-radius: 5px;
-    cursor: pointer;
-    box-shadow: 2px 2px 4px 0px rgba(66, 68, 90, 1);
-    border: 1px solid black;
-    margin: 10px;
-    scale: 1.1;
-}
+.options-module-form {
+    &__body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 
-.options-module-button:hover {
-    transform: scale(1.1);
-    transition: transform 0.2s ease-in-out
-}
+    &__footer {
+        display: flex;
+        flex-direction: row;
+        justify-content: center !important;
+        align-items: center;
+    }
 
-.options-module-section {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-}
+    &__header {
+        display: flex;
+        justify-content: center !important;
+        align-items: center !important;
+    }
 
-.options-module-buttons-section {
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
-    align-items: center;
-}
+    &__view-label {
+        cursor: pointer;
+    }
 
-.options-module-speed-display {
-    margin: 10px;
-}
+    &__view-field {
+        cursor: pointer;
+    }
 
-.options-module-field-mode-radio {
-    scale: 1.2;
-}
+    &__visible-field {
+        cursor: pointer;
+    }
 
-.options-module-field-mode {
-    cursor: pointer;
-}
+    &__voices-field {
+        cursor: pointer;
+    }
 
-.options-module-field-mode:hover {
-    transform: scale(1.05);
-    transition: transform 0.2s ease-in-out
-}
+    &__speed-label {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
 
-.options-module-field-speed {
-    cursor: pointer;
-}
-
-.options-module-field-speed:hover {
-    transform: scale(1.05);
-    transition: transform 0.2s ease-in-out
-}
-
-.options-module-field-hidden {
-    scale: 1.5;
-    cursor: pointer;
-}
-
-.options-module-form h5{
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-}
-
-.options-module-voice
-{
-    cursor: pointer;
+    &__speed-display {
+        margin-left: 1.2rem;
+    }
 }
