--- a/src/containers/Header/Header.scss
+++ b/src/containers/Header/Header.scss
@@ -4,23 +4,20 @@
 .header {
     width: 100%;
     min-height: 8vh;
-    max-height: 10vh;
     box-shadow: $box-shadow;
-    z-index: 1;
     display: flex;
     flex-direction: row;
     background-color: $white;
     
     &__navbar {
-        padding: 0.5rem;
+        padding-bottom: 1rem !important;
+        padding-top: 1rem !important;
     }
     
     &__brand {
     }
 
     &__dropdown {
-        padding: 1rem;
-
         .nav-link:hover {
             opacity: 0.5;
             scale: 1.02;
