--- a/src/containers/Header/Header.scss
+++ b/src/containers/Header/Header.scss
@@ -12,6 +12,7 @@
     &__navbar {
         padding-bottom: 1rem !important;
         padding-top: 1rem !important;
+        width: 100%;
     }
     
     &__brand {
@@ -35,9 +36,10 @@
 
     &__search {
         display: flex;
-        justify-content: center;
+        justify-content: flex-end;
         align-items: center;
         margin-left: auto;
         padding: 0.5rem;
+        margin-left: auto;
     }
 }
