--- a/src/styles/Custom/_custom.scss
+++ b/src/styles/Custom/_custom.scss
@@ -42,7 +42,6 @@ $theme-colors: map-merge($theme-colors, $custom-colors);
 @import "~bootstrap/scss/mixins";
 @import "~bootstrap/scss/root";
 
-// @include list-group-item-variant("balwan", $blue, $black);
 // 6. Optionally include any other parts as needed
 @import "~bootstrap/scss/utilities";
 @import "~bootstrap/scss/reboot";
@@ -65,6 +64,8 @@ $theme-colors: map-merge($theme-colors, $custom-colors);
 @import "~bootstrap/scss/modal";
 @import "~bootstrap/scss/spinners";
 @import "~bootstrap/scss/tooltip";
+@import "~bootstrap/scss/transitions";
+@import "~bootstrap/scss/placeholders";
 //popover
 
 // 7. Optionally include utilities API last to generate classes based on the Sass map in `_utilities.scss`
