--- a/src/containers/View/Views/VerticalView/VerticalView.scss
+++ b/src/containers/View/Views/VerticalView/VerticalView.scss
@@ -11,6 +11,14 @@
         // align-items: center;
     }
 
+    &__translation
+    {
+        width: 100%;
+        height: 100%;
+        max-width: 100%;
+        max-height: 100%;
+    }
+
     &__row{
         display: flex;
         flex-direction: row;
