--- a/src/containers/Hub/Hub.scss
+++ b/src/containers/Hub/Hub.scss
@@ -1,9 +1,11 @@
+@use "../../styles/main";
+
 .hub {
     &__sections {
         display: flex;
         width: 100%;
         flex-direction: row;
-        background-color: whitesmoke;
+        background-color: main.$hub-bg;
         min-height: 82vh;
     }
 
@@ -14,5 +16,13 @@
         align-items: center;
         flex-direction: column;
         padding: 0.8rem;
+    }
+}
+
+@include main.color-mode(dark) {
+    .hub {
+        &__sections {
+            background-color: main.$hub-bg-dark;
+        }
     }
 }
