--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -10,4 +10,5 @@
     align-items: center;
     border-width: 2px !important;
     font-size: 1.6rem !important;
+    font-size: 1.6rem !important;
 }
