--- a/src/containers/View/Views/ClassicView/ClassicView.scss
+++ b/src/containers/View/Views/ClassicView/ClassicView.scss
@@ -8,7 +8,8 @@
 
     &__sentence-segment {
         cursor: pointer;
-        padding: 0.1rem;
+        padding: 0.15rem;
+        padding-left: 0.7rem;
         display: flex;
         flex-wrap: wrap;
     }
@@ -17,7 +18,9 @@
         position: relative;
         border: 1px solid black;
         background-color: main.$translation-segment;
-        padding: 0.1rem;
+        padding: 0.15rem;
+        padding-left: 0.3rem;
+        padding-right: 0.3rem;
         display: flex;
         flex-wrap: wrap;
         height: 100%;
@@ -27,6 +30,7 @@
         display: flex;
         justify-content: flex-end;
         align-items: flex-start;
+        padding: 0.15rem;
     }
 }
 
