--- a/src/google/components/GoogleLogin/GoogleLogin.scss
+++ b/src/google/components/GoogleLogin/GoogleLogin.scss
@@ -7,13 +7,14 @@
 }
 
 .login-button {
-    border-radius: 2px;
+    // border-radius: 2px;
+    margin-left: 8px !important;
 }
 
-.login-button:hover {
-    background-color: #d2d2d2;
-    cursor:pointer;
-}
+// .login-button:hover {
+//     background-color: #d2d2d2;
+//     cursor:pointer;
+// }
 
 .logout-button {
     border-radius: 2px;
